# UrsineEngine

./: .gitignore  CMakeLists.txt  README.md  TODO.txt  build.sh  build_script.sh  clean.sh  install.sh  test.py
cmake/: UrsineEngineConfig.cmake
core/: CMakeLists.txt  Callback.hpp  CallbackHolder.cpp  CallbackHolder.hpp  Component.cpp  Component.hpp  CoreObserver.cpp  CoreObserver.hpp  Environment.cpp  Environment.hpp  Extension.cpp  Extension.hpp  GameObject.cpp  GameObject.hpp  GraphicalComponent.cpp  GraphicalComponent.hpp  ModelComponent.cpp  ModelComponent.hpp  Observer.cpp  Scene.cpp  Scene.hpp  Shader.cpp  ShaderComponent.cpp  ShaderComponent.hpp  Signal.hpp
core/python/: CMakeLists.txt  ComponentWrapper.cpp  ComponentWrapper.hpp  Core.cpp  GameObjectWrapper.cpp  GameObjectWrapper.hpp  SceneWrapper.cpp  SceneWrapper.hpp
core/util/: CMakeLists.txt
examples/: CMakeLists.txt  test.py  test.vert
examples/backpack/: backpack.frag  backpack.py  backpack.vert  purple.frag
examples/c++/: CMakeLists.txt
examples/c++/01-hello-world/: CMakeLists.txt  main.cpp
examples/c++/02-gameobjects-and-components/: CMakeLists.txt  PlayerInputComponent.cpp  PlayerInputComponent.hpp  PlayerObject.hpp  main.cpp
examples/c++/02-observers-and-notifications/: CMakeLists.txt  HealthComponent.hpp
examples/c++/03-signals/: AchievementsTracker.hpp  CMakeLists.txt  PlayerInputComponent.cpp  PlayerInputComponent.hpp  PlayerObject.hpp  PlayerSignals.cpp  PlayerSignals.hpp  main.cpp
extensions/: CMakeLists.txt
extensions/python/: CMakeLists.txt  ComponentWrapper.hpp  Core.cpp  GameObjectWrapper.cpp  PyExtension.cpp  PyExtension.hpp  SceneWrapper.cpp
extensions/python/core/: ComponentWrapper.cpp  Core.cpp  GameObjectWrapper.hpp  SceneWrapper.hpp
extensions/python/lib/: CMakeLists.txt  PyCoreModule.cpp  PyMessenger.cpp  PyMessenger.hpp
extensions/python/lib/core/: CMakeLists.txt  PyCoreModule.cpp  PyMessenger.hpp
extensions/python/lib/core/wrappers/: PyComponentWrapper.hpp  PyGameObjectWrapper.cpp  PyGameObjectWrapper.hpp
extensions/python/lib/math/: CMakeLists.txt  PyMathModule.cpp
extensions/python/lib/math/wrappers/: PyVectorWrapper.hpp
extensions/python/lib/wrappers/: PyComponentWrapper.cpp  PyComponentWrapper.hpp  PyGameObjectWrapper.cpp  PyGameObjectWrapper.hpp  PyGraphicalComponentWrapper.cpp  PySceneWrapper.cpp  PySceneWrapper.hpp  PyVectorWrapper.cpp
extensions/python/math/: CMakeLists.txt  Math.cpp
math/: CMakeLists.txt  MathUtils.cpp  MathUtils.hpp  Matrix.cpp  Matrix.hpp  Matrix4D.cpp  Matrix4D.hpp  Quaternion.cpp  Quaternion.hpp  Vector2D.cpp  Vector2D.hpp  Vector3D.cpp  Vector3D.hpp
math/tests/: CMakeLists.txt  Matrix4DTests.cpp  MatrixTests.cpp  QuaternionTests.cpp  Vector2DTests.cpp  Vector3DTests.cpp
python/: CMakeLists.txt  __init__.py
python/core/: CMakeLists.txt  ComponentWrapper.cpp  Core.cpp  GameObjectWrapper.cpp  GameObjectWrapper.hpp  GraphicalComponentWrapper.cpp  GraphicalComponentWrapper.hpp  Messenger.cpp  SceneWrapper.cpp  SceneWrapper.hpp
resources/shaders/: DefaultShader.frag  DefaultShader.vert  ModelBase.frag
sample_games/: CMakeLists.txt  main.cpp
source/: CMakeLists.txt
source/core/: CMakeLists.txt  Camera.cpp  Camera.hpp  Component.cpp  Component.hpp  CoreObservers.hpp  CoreSignals.cpp  CoreSignals.hpp  Environment.cpp  Environment.hpp  GameObject.cpp  GameObject.hpp  GraphicalComponent.cpp  GraphicalComponent.hpp  InputComponent.cpp  InputComponent.hpp  LightComponent.cpp  LightComponent.hpp  MeshComponent.cpp  MeshComponent.hpp  ModelComponent.cpp  ModelComponent.hpp  Observer.cpp  Observer.hpp  Scene.cpp  Scene.hpp  Shader.cpp  Shader.hpp  Signal.hpp
source/core/shaders/: ModelBase.frag  ModelBase.vert
source/math/: Matrix4D.cpp  Matrix4D.hpp  Util.cpp  Util.hpp  Vector4D.cpp  Vector4D.hpp
source/renderer/: Camera.cpp  Camera.hpp  GraphicalComponent.cpp  GraphicalComponent.hpp  MeshComponent.cpp  MeshComponent.hpp  ModelComponent.cpp  ModelComponent.hpp  Shader.cpp  Shader.hpp  SpriteComponent.cpp  SpriteComponent.hpp  TextComponent.cpp  TextComponent.hpp  Texture.cpp  Texture.hpp
source/renderer/lighting/: DirectionalLightComponent.cpp  DirectionalLightComponent.hpp  LightComponent.cpp  LightComponent.hpp  PointLightComponent.cpp  PointLightComponent.hpp  SpotLightComponent.cpp  SpotLightComponent.hpp
src/: Animation.cpp  Animation.hpp  AnimationManager.cpp  AnimationManager.hpp  Callback.hpp  CallbackHolder.cpp  CallbackHolder.hpp  Camera.cpp  Camera.hpp  Component.cpp  Component.hpp  CoreObserver.hpp  Environment.cpp  Environment.hpp  Event.hpp  GameObject.cpp  GameObject.hpp  Hitbox.hpp  Scene.cpp  Scene.hpp  Texture.cpp  Texture.hpp  Vector2D.cpp  Vector2D.hpp  main.cpp
src/core/: AnimationManager.hpp  Callback.hpp  Component.cpp  Component.hpp  CoreObserver.cpp  CoreObserver.hpp  Environment.cpp  GameObject.cpp  GameObject.hpp  GraphicalComponent.cpp  GraphicalComponent.hpp  InputComponent.cpp  InputComponent.hpp  Scene.cpp  Scene.hpp  Texture.cpp
src/math/: Vector2D.hpp
src/test_game/: main.cpp
